the seconde task

--- a/index.html
+++ b/index.html
@@ -69,7 +69,19 @@
                             </form>
                             <button id="btnScore">KẾT QUẢ</button>
                         </section>
-                        <section class="section2"></section>
+                        <section class="section2">
+                            <div class="form-group">
+                              <label for="electricity_input_name">Tên khách hàng:</label>
+                              <input type="text" name="electricity_input_name" id="electricity_input_name" class="form-control" placeholder="Nhập tên" aria-describedby="helpId">
+                              <small id="helpId" class="text-muted">Ví dụ: Nguyễn Văn A</small>
+                            </div>
+                            <div class="form-group">
+                              <label for="electricity_input_bill">Số KW tiêu thụ:</label>
+                              <input type="number" name="electricity_input_bill" id="electricity_input_bill" class="form-control" placeholder="Nhập số KW" aria-describedby="helpId">
+                              <small id="helpId" class="text-muted">Ví dụ: 450</small>
+                            </div>
+                            <button type="button" class="btn btn-primary" id="electricity_btn">KẾT QUẢ</button>
+                        </section>
                     </div>
                 </div>
             </div>
